# cpp-object-pool

./: .gitmodules  .project_config  .travis.yml  CMakeLists.txt
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README.md
src/: ObjectPool.hpp  ObjectPool.hxx  PooledObject.hpp  PooledObject.hxx
tests/: doctest_config.cpp  test_driver.sh
tests/unit_tests/: PooledObject_test.cpp
